Image and READ.ME
Corrections in image path and READ.ME.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <main>
 
-    <img src="/images/logo.svg" alt="Ping" id="logo">
+    <img src="logo.svg" alt="Ping" id="logo">
 
     <h1>We are launching <strong>soon!</strong></h1>
 
